--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site Simples</title>
+    <link rel="icon" type="icon" href="./imagens/logo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,9 +12,32 @@
             margin: 50px;
         }
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
 </head>
-<body>
-    <h1>Olá, Mundo!</h1>
-    <p>Este é um site HTML simples hospedado no Vercel.</p>
+<body class="container text-center">
+    <header class="border-bottom">
+        <div>
+            <img src="./imagens/logo.png" width="100">
+        </div>
+        <h3>Fa<span class="text-warning">st-Delive</span>ry</h3>
+    </header>
+
+    <div class="mt-5 mb-5 border-bottom">
+        <p class="fw-bold">Bem-vindo ao sistema MG. fast-Delivery</p>
+        <p class="">Aproveite os nosso servicos.</p>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+          <img src="./imagens/fast.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text fw-bold text-uppercase">Compra e entrega de produtos.</p>
+            <a href="" class="btn btn-outline-primary">Acesse.</a>
+          </div>
+        </div>
+    </div>
+
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
