Avancando com a construção do front end

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 
     <div class="d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          <img src="./imagens/fast.png" class="card-img-top" alt="..." />
           <div class="card-body">
-            <p class="card-text fw-bold text-uppercase">Compra e entrega de produtos.</p>
+            <p class="card-text fw-bold text-uppercase border-bottom">Compra e entrega de produtos.</p>
             <a href="" class="btn btn-outline-primary">Acesse.</a>
           </div>
         </div>
