--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site Simples</title>
+    <title>Login</title>
     <link rel="icon" type="icon" href="./imagens/logo.png">
     <style>
         body {
@@ -24,18 +24,25 @@
     </header>
 
     <div class="mt-5 mb-5 border-bottom">
-        <p class="fw-bold">Bem-vindo ao sistema MG. fast-Delivery</p>
-        <p class="">Aproveite os nosso servicos.</p>
+        <p class="fw-bold">Bem-vindo ao sistema MG. fast-Delivery, faca Login</p>
     </div>
 
-    <div class="d-flex justify-content-center">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <p class="card-text fw-bold text-uppercase border-bottom">Compra e entrega de produtos.</p>
-            <a href="./criarConta.html" class="btn btn-outline-primary">Criar conta.</a>
-            <a href="./login.html" class="btn btn-primary">Entrar na conta.</a>
-          </div>
-        </div>
+    <div class="d-grid justify-content-center ">
+    	<form action="./dashboard-cliente.html">
+    		
+	        <div class="form-floating mb-2">
+	        	<input type="text" name="" class="form-control">
+	        	<label>Nome do usuario</label>
+	        </div>
+	        <div class="form-floating">
+	        	<input type="password" name="" class="form-control">
+	        	<label>Senha do usuario</label>
+	        </div>
+	        <div class=" mt-2 d-flex justify-content-between">
+	        	<a href="./criarConta.html" class="btn btn-link">Criar conta</a>
+	        	<input type="submit" value="Entrar" class="btn btn-primary">
+	        </div>
+    	</form>
     </div>
 
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
