--- a/dashboard-cliente.html
+++ b/dashboard-cliente.html
@@ -1,11 +1,337 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MG. inicial</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dash Fast Delivery</title>
+    <link rel="icon" type="image/png" href="./imagens/logo.png">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f5f5f5;
+            color: #333;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0; /* Remove margens padrão */
+        }
+
+        /* Header fixo e animado */
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 9px;
+            background-color: #ff6200;
+            color: white;
+            font-size: 24px;
+            font-weight: bold;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            animation: slideIn 1s ease-out;
+            user-select: none;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+        }
+
+        @keyframes slideIn {
+            0% { opacity: 0; transform: translateY(-100%); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        .header img {
+            animation: fadeIn 1.5s ease-in-out;
+            margin-right: 10px; /* Espaço entre logo e texto */
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        .header > div:nth-child(2) {
+            animation: bounceIn 1s ease-out;
+        }
+
+        @keyframes bounceIn {
+            0% { opacity: 0; transform: scale(0.3); }
+            50% { opacity: 1; transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        /* Navbar */
+        .navbar-custom {
+            background-color: #ff6200;
+            margin-top: 70px; /* Ajuste para o header fixo */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar-custom .navbar-brand,
+        .navbar-custom .nav-link {
+            color: white;
+            font-weight: 500;
+        }
+
+        .navbar-custom .nav-link:hover {
+            color: #ffe6cc;
+        }
+
+        .navbar-custom .dropdown-menu {
+            background-color: #ff6200;
+            border: none;
+        }
+
+        .navbar-custom .dropdown-item {
+            color: white;
+        }
+
+        .navbar-custom .dropdown-item:hover {
+            background-color: #e65b00;
+            color: #ffe6cc;
+        }
+
+        /* Botão customizado */
+        .btn-custom {
+            background-color: #ff6200;
+            color: white;
+            border: none;
+            transition: transform 0.2s, background-color 0.2s;
+        }
+
+        .btn-custom:hover {
+            transform: scale(1.05);
+            background-color: #e65b00;
+            color: white;
+        }
+
+        /* Seções */
+        .section {
+            display: none;
+            margin-top: 20px;
+            padding: 20px;
+        }
+
+        .section.active {
+            display: block;
+        }
+
+        .card-status {
+            font-weight: bold;
+            color: #ff6200;
+        }
+
+        /* Footer */
+        .footer {
+            background-color: #ff6200;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: auto;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-	DASH
+    <!-- Header fixo -->
+    <div class="header">
+        <div>
+            <img src="./imagens/logo.png" width="50" alt="Logo Fast-Delivery">
+        </div>
+        <div>Fast Delivery</div>
+    </div>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#" id="titular">Meus Pedidos</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="showSection('fazer-pedido')">Peça Agora!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="showSection('meus-pedidos')">Veja seus Pedidos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Explore Mais
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
+                            <li><a class="dropdown-item" href="promocoes.html">Promoções</a></li>
+                            <li><a class="dropdown-item" href="suporte.html">Suporte</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Conteúdo -->
+    <div class="container mt-4 mb-5">
+        <!-- Seção Dash -->
+        <div id="dash" class="section">
+            <h2 class="text-center mb-4">Dash</h2>
+            <div class="card p-4 mx-auto" style="max-width: 500px;">
+                <p class="text-center">Bem-vindo ao Fast Delivery! Escolha uma opção no menu acima.</p>
+            </div>
+        </div>
+
+        <!-- Seção Fazer Pedido -->
+        <div id="fazer-pedido" class="section">
+            <h2 class="text-center mb-4">Fazer Pedido</h2>
+            <div class="card p-4 mx-auto" style="max-width: 500px;">
+                <form id="pedido-form">
+                    <div class="mb-3">
+                        <label for="tipo-produto" class="form-label">Tipo de Produto</label>
+                        <select class="form-select" id="tipo-produto" name="tipo-produto" required>
+                            <option value="">Selecione uma categoria</option>
+                            <option value="comida">Comida</option>
+                            <option value="mercado">Mercado</option>
+                            <option value="farmacia">Farmácia</option>
+                            <option value="outros">Outros</option>
+                        </select>
+                    </div>
+                    <div class="mb-3" id="nome-produto-container" style="display: none;">
+                        <label for="nome-produto" class="form-label">Nome do Produto</label>
+                        <select class="form-select" id="nome-produto" name="nome-produto" required>
+                            <option value="">Selecione um produto</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="onde-comprar" class="form-label">Onde Comprar</label>
+                        <input type="text" class="form-control" id="onde-comprar" name="onde-comprar" placeholder="Ex.: Pizzaria Bella" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="onde-deixar" class="form-label">Onde Deixar</label>
+                        <input type="text" class="form-control" id="onde-deixar" name="onde-deixar" placeholder="Ex.: Rua das Flores, 123" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="contato" class="form-label">Contato de Quem Receberá</label>
+                        <input type="text" class="form-control" id="contato" name="contato" placeholder="Ex.: (11) 98765-4321" required>
+                    </div>
+                    <button type="submit" class="btn btn-custom w-100">Enviar Pedido</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Seção Meus Pedidos -->
+        <div id="meus-pedidos" class="section active">
+            <h2 class="text-center mb-4">Meus Pedidos</h2>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title"><span class="card-status">Entregue</span> - Pizza Margherita</h5>
+                    <p class="card-text">Valor: R$ 45,90</p>
+                    <p class="card-text">Data: 23/02/2025 às 19:30</p>
+                    <p class="card-text">Destino: Rua das Flores, 123</p>
+                    <p class="card-text">Contato: (11) 98765-4321</p>
+                </div>
+            </div>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title"><span class="card-status">A caminho</span> - Sushi Combo</h5>
+                    <p class="card-text">Valor: R$ 60,00</p>
+                    <p class="card-text">Data: 23/02/2025 às 20:00</p>
+                    <p class="card-text">Destino: Av. Central, 456</p>
+                    <p class="card-text">Contato: (11) 91234-5678</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>© 2025 Fast Delivery, Lda - Todos os direitos reservados</p>
+        <p>suporte@df.com | (+258) 845 109 383</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Função para alternar seções
+        function showSection(sectionId) {
+            document.querySelectorAll('.section').forEach(section => {
+                section.classList.remove('active');
+            });
+            const targetSection = document.getElementById(sectionId);
+            if (targetSection) {
+                targetSection.classList.add('active');
+            }
+
+            const titularElement = document.getElementById("titular");
+            const titulos = {
+                "dash": "Dash",
+                "fazer-pedido": "Fazer Pedido",
+                "meus-pedidos": "Meus Pedidos"
+            };
+            titularElement.innerHTML = titulos[sectionId] || "Página não encontrada";
+        }
+
+        // Lógica do formulário
+        const tipoProdutoSelect = document.getElementById('tipo-produto');
+        const nomeProdutoContainer = document.getElementById('nome-produto-container');
+        const nomeProdutoSelect = document.getElementById('nome-produto');
+
+        const produtosPorCategoria = {
+            'comida': [
+                { value: 'pizza', text: 'Pizza' },
+                { value: 'hamburguer', text: 'Hambúrguer' },
+                { value: 'sushi', text: 'Sushi' }
+            ],
+            'mercado': [
+                { value: 'arroz', text: 'Arroz' },
+                { value: 'feijao', text: 'Feijão' },
+                { value: 'leite', text: 'Leite' }
+            ],
+            'farmacia': [
+                { value: 'paracetamol', text: 'Paracetamol' },
+                { value: 'bandaid', text: 'Band-aid' },
+                { value: 'alcool', text: 'Álcool em gel' }
+            ],
+            'outros': [
+                { value: 'livro', text: 'Livro' },
+                { value: 'roupa', text: 'Roupa' },
+                { value: 'eletronico', text: 'Eletrônico' }
+            ]
+        };
+
+        tipoProdutoSelect.addEventListener('change', function() {
+            const categoria = this.value;
+            nomeProdutoSelect.innerHTML = '<option value="">Selecione um produto</option>';
+            nomeProdutoContainer.style.display = 'none';
+
+            if (produtosPorCategoria[categoria]) {
+                produtosPorCategoria[categoria].forEach(produto => {
+                    const option = document.createElement('option');
+                    option.value = produto.value;
+                    option.text = produto.text;
+                    nomeProdutoSelect.appendChild(option);
+                });
+                nomeProdutoContainer.style.display = 'block';
+            }
+        });
+
+        document.getElementById('pedido-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const pedido = {
+                tipo: tipoProdutoSelect.value,
+                produto: nomeProdutoSelect.value,
+                origem: document.getElementById('onde-comprar').value,
+                destino: document.getElementById('onde-deixar').value,
+                contato: document.getElementById('contato').value,
+                data: new Date().toLocaleString()
+            };
+            alert(`Pedido: ${pedido.produto} (${pedido.tipo}) de ${pedido.origem} para ${pedido.destino}`);
+            this.reset();
+            nomeProdutoContainer.style.display = 'none';
+            showSection('meus-pedidos'); // Volta para Meus Pedidos após envio
+        });
+    </script>
 </body>
 </html>
