--- a/login.html
+++ b/login.html
@@ -1,50 +1,304 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="icon" type="icon" href="./imagens/logo.png">
+    <title>Login - Dash Fast Delivery</title>
+    <link rel="icon" type="image/png" href="./imagens/logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+        }
+
+        /* Header fixo e animado */
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 9px;
+            background-color: #ff6200;
+            color: white;
+            font-size: 24px;
+            font-weight: bold;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            animation: slideIn 1s ease-out;
+            user-select: none;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        @keyframes slideIn {
+            0% { opacity: 0; transform: translateY(-100%); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        .header img {
+            animation: fadeIn 1.5s ease-in-out;
+            margin-right: 10px;
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        .header h3 {
+            margin: 0;
+            animation: bounceIn 1s ease-out;
+        }
+
+        @keyframes bounceIn {
+            0% { opacity: 0; transform: scale(0.3); }
+            50% { opacity: 1; transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        .header .text-warning {
+            color: #ffe6cc;
+        }
+
+        /* Navbar */
+        .navbar-custom {
+            background-color: #ff6200;
+            margin-top: 60px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar-custom .navbar-brand,
+        .navbar-custom .nav-link {
+            color: white;
+            font-weight: 500;
+        }
+
+        .navbar-custom .nav-link:hover {
+            color: #ffe6cc;
+        }
+
+        /* Botão customizado */
+        .btn-custom {
+            background-color: #ff6200;
+            color: white;
+            border: none;
+            transition: transform 0.2s, background-color 0.2s;
+        }
+
+        .btn-custom:hover {
+            transform: scale(1.05);
+            background-color: #e65b00;
+        }
+
+        /* Formulário e resultado */
+        .form-container, .result-container {
+            max-width: 400px;
+            margin: 100px auto 0;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        #telefone, #codigo {
+            letter-spacing: 10px;
+            font-size: 20px;
             text-align: center;
-            margin: 50px;
+        }
+
+        .result-message {
+            animation: fadeIn 0.5s ease-in;
+        }
+
+        /* Footer */
+        .footer {
+            background-color: #ff6200;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: auto;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
         }
     </style>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
- 
 </head>
-<body class="container text-center">
-    <header class="border-bottom">
+<body>
+    <!-- Header -->
+    <header class="header">
         <div>
-            <img src="./imagens/logo.png" width="100">
+            <img src="./imagens/logo.png" width="50" alt="Logo Fast-Delivery">
         </div>
         <h3>Fa<span class="text-warning">st-Delive</span>ry</h3>
     </header>
 
-    <div class="mt-5 mb-5 border-bottom">
-        <p class="fw-bold">Bem-vindo ao sistema MG. fast-Delivery, faca Login</p>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#">Login</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="criarConta.html">Criar Conta</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="promocoes.html">Promoções</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="suporte.html">Suporte</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Formulário de Login -->
+    <div class="card p-4 form-container" id="form-container">
+        <form id="login-form">
+            <div class="mb-3" id="telefone-container">
+                <label for="telefone" class="form-label">Número de Telefone</label>
+                <input type="text" class="form-control" id="telefone" name="telefone" placeholder="8••••••••" maxlength="9" required>
+            </div>
+            <div class="mb-3" id="codigo-container">
+                <label for="codigo" class="form-label">Código de 4 Dígitos</label>
+                <input type="password" class="form-control" id="codigo" name="codigo" placeholder="••••" maxlength="4" required>
+            </div>
+            <button type="submit" class="btn btn-custom w-100" id="form-button">Entrar</button>
+        </form>
+        <p class="text-center mt-3">
+            <span id="toggle-text">Procurar conta?</span>
+            <a href="#" class="text-decoration-none" id="toggle-link">Procurar</a>
+        </p>
     </div>
 
-    <div class="d-grid justify-content-center ">
-    	<form action="./dashboard-cliente.html">
-    		
-	        <div class="form-floating mb-2">
-	        	<input type="text" name="" class="form-control">
-	        	<label>Nome do usuario</label>
-	        </div>
-	        <div class="form-floating">
-	        	<input type="password" name="" class="form-control">
-	        	<label>Senha do usuario</label>
-	        </div>
-	        <div class=" mt-2 d-flex justify-content-between">
-	        	<a href="./criarConta.html" class="btn btn-link">Criar conta</a>
-	        	<input type="submit" value="Entrar" class="btn btn-primary">
-	        </div>
-    	</form>
+    <!-- Container de Resultado -->
+    <div class="card p-4 result-container hidden" id="result-container">
+        <div id="result-message" class="result-message"></div>
+        <button class="btn btn-custom w-100 mt-3" id="back-button">Voltar</button>
     </div>
 
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Footer -->
+    <footer class="footer">
+        <p>© 2025 Fast Delivery - Todos os direitos reservados</p>
+        <p>Contato: suporte@df.com | (+258) 845 109 383</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const form = document.getElementById('login-form');
+        const formContainer = document.getElementById('form-container');
+        const resultContainer = document.getElementById('result-container');
+        const resultMessage = document.getElementById('result-message');
+        const telefoneContainer = document.getElementById('telefone-container');
+        const codigoContainer = document.getElementById('codigo-container');
+        const formButton = document.getElementById('form-button');
+        const toggleLink = document.getElementById('toggle-link');
+        const toggleText = document.getElementById('toggle-text');
+        const backButton = document.getElementById('back-button');
+
+        // Estado inicial: modo "Entrar"
+        let isProcurarMode = false;
+
+        // Simulação de contas existentes
+        const contasExistentes = ['845109383', '841234567', '849876543'];
+
+        // Alterna entre "Entrar" e "Procurar"
+        toggleLink.addEventListener('click', function(e) {
+            e.preventDefault();
+            if (!isProcurarMode) {
+                codigoContainer.classList.add('hidden');
+                formButton.textContent = 'Procurar';
+                toggleText.textContent = 'Fazer login?';
+                toggleLink.textContent = 'Login';
+                isProcurarMode = true;
+            } else {
+                codigoContainer.classList.remove('hidden');
+                formButton.textContent = 'Entrar';
+                toggleText.textContent = 'Procurar conta?';
+                toggleLink.textContent = 'Procurar';
+                isProcurarMode = false;
+            }
+        });
+
+        // Lógica de envio do formulário
+        form.addEventListener('submit', function(e) {
+
+            e.preventDefault();
+            const telefone = document.getElementById('telefone').value;
+            alert(telefone)
+            // Validação do telefone
+            if (!telefone.match(/^8[0-9]{8}$/)) {
+                alert('Insira um número válido: deve começar com 8 e ter 9 dígitos.');
+                return;
+            }
+
+            if (isProcurarMode) {
+                // Modo "Procurar"
+                formContainer.classList.add('hidden');
+                resultContainer.classList.remove('hidden');
+                
+                if (contasExistentes.includes(telefone)) {
+                    resultMessage.innerHTML = `
+                        <div class="alert alert-success">
+                            Conta encontrada para ${telefone}! Um código foi enviado ao seu telefone.
+                        </div>
+                    `;
+                } else {
+                    resultMessage.innerHTML = `
+                        <div class="alert alert-danger">
+                            Nenhuma conta encontrada para ${telefone}. 
+                            <a href="criarConta.html" class="text-decoration-none">Criar uma conta?</a>
+                        </div>
+                    `;
+                }
+            } else {
+                // Modo "Entrar"
+                const codigo = document.getElementById('codigo').value;
+                if (!codigo.match(/^[0-9]{4}$/)) {
+                    alert('Insira um código válido de 4 dígitos.');
+                    return;
+                }
+                alert(`Entrando com telefone: ${telefone} e código: ${codigo}`);
+                window.location.href = 'dashboard-cliente.html';
+            }
+        });
+
+        // Voltar ao formulário
+        backButton.addEventListener('click', function() {
+            resultContainer.classList.add('hidden');
+            formContainer.classList.remove('hidden');
+            form.reset();
+            if (isProcurarMode) {
+                codigoContainer.classList.add('hidden');
+                formButton.textContent = 'Procurar';
+                toggleText.textContent = 'Fazer login?';
+                toggleLink.textContent = 'Login';
+            } else {
+                codigoContainer.classList.remove('hidden');
+                formButton.textContent = 'Entrar';
+                toggleText.textContent = 'Procurar conta?';
+                toggleLink.textContent = 'Procurar';
+            }
+        });
+
+        // Filtros de entrada
+        document.getElementById('telefone').addEventListener('input', function() {
+            this.value = this.value.replace(/[^0-9]/g, '');
+            if (this.value.length > 9) this.value = this.value.slice(0, 9);
+        });
+
+        document.getElementById('codigo').addEventListener('input', function() {
+            this.value = this.value.replace(/[^0-9]/g, '');
+            if (this.value.length > 4) this.value = this.value.slice(0, 4);
+        });
+    </script>
 </body>
 </html>
