--- a/perfil.html
+++ b/perfil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Conta - DashFastDelivery</title>
+    <title>Perfil - DashFastDelivery</title>
     <link rel="icon" type="image/png" href="./imagens/logo.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -62,27 +62,6 @@
         }
 
 
-        .navbar-custom {
-            background-color: #ff6200;
-            margin-top: 70px; /* Ajuste para o header fixo */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .header h3 {
-            margin: 0;
-            font-size: 28px;
-        }
-        .header .text-warning {
-            color: #ffe6cc;
-        }
-        .navbar-custom {
-            background-color: #ff6200;
-        }
-        .navbar-custom .navbar-brand, .navbar-custom .nav-link {
-            color: white;
-        }
-        .navbar-custom .nav-link:hover {
-            color: #ffe6cc;
-        }
         .btn-custom {
             background-color: #ff6200;
             color: white;
@@ -94,7 +73,29 @@
             background-color: #e65b00;
             color: white;
         }
-        .form-container {
+        .navbar-custom {
+            background-color: #ff6200;
+            margin-top: 70px; /* Ajuste para o header fixo */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .navbar-custom .navbar-brand, .navbar-custom .nav-link {
+            color: white;
+        }
+        .navbar-custom .nav-link:hover {
+            color: #ffe6cc;
+        }
+        .navbar-custom .dropdown-menu {
+            background-color: #ff6200;
+            border: none;
+        }
+        .navbar-custom .dropdown-item {
+            color: white;
+        }
+        .navbar-custom .dropdown-item:hover {
+            background-color: #e65b00;
+            color: #ffe6cc;
+        }
+        .profile-container {
             max-width: 500px;
             margin: 0 auto;
         }
@@ -105,64 +106,60 @@
             padding: 10px;
             margin-top: auto;
         }
-
-        /* Estilo para o campo de telefone */
-        #telefone {
-            letter-spacing: 10px;
-        }
     </style>
 </head>
 <body>
-        <!-- Header -->
-    <header class="header">
+
+    <!-- Header fixo -->
+    <div class="header">
         <div>
             <img src="./imagens/logo.png" width="50" alt="Logo Fast-Delivery">
         </div>
-        <h3>Fa<span class="text-warning">st-Delive</span>ry</h3>
-    </header>
+        <div>Fast Delivery</div>
+    </div>
 
-    <!-- Navbar com menu no lado direito -->
+    <!-- Navbar com menu no lado direito e dropdown -->
     <nav class="navbar navbar-expand-md navbar-custom">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">Criar conta</a>
+            <a class="navbar-brand fw-bold" href="#">Perfil</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="text-center collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Entrar</a>
+                        <a class="nav-link" href="dashboard-cliente.html">Principal</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="promocoes.html">Promoções</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="suporte.html">Suporte</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Explore Mais
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="promocoes.html">Promoções</a></li>
+                            <li><a class="dropdown-item" href="suporte.html">Suporte</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-
-    <!-- Formulário de Registro -->
+    <!-- Conteúdo do Perfil -->
     <div class="container mt-4 mb-4">
-        <div class="card p-4 form-container">
-            <h2 class="text-center mb-4">Registar-se</h2>
+        <div class="card p-4 profile-container">
             <form>
                 <div class="mb-3">
-                    <label for="nome" class="form-label">Nome Completo<span> *</span></label>
-                    <input type="text" class="form-control" id="nome" name="nome" placeholder="Ex.: João Silva" required>
+                    <label for="nome" class="form-label">Nome Completo</label>
+                    <input type="text" class="form-control" id="nome" name="nome" value="João Silva" required>
                 </div>
                 <div class="mb-3">
-                    <label for="telefone" class="form-label">Número de Telefone<span> *</span></label>
-                    <input type="text" class="form-control" id="telefone" name="telefone" placeholder="8••••••••" maxlength="9" required>
+                    <label for="telefone" class="form-label">Telefone</label>
+                    <input type="tel" class="form-control" id="telefone" name="telefone" value="(11) 98765-4321" required>
                 </div>
                 <div class="mb-3">
-                    <label for="bairro" class="form-label">Bairro<span> *</span></label>
+                    <label for="bairro" class="form-label">Bairro</label>
                     <select class="form-select" id="bairro" name="bairro" required>
-                        <option value="" disabled selected>Selecione seu bairro</option>
-                        <option value="josina-machel">Josina Machel</option>
+                        <option value="josina-machel" selected>Josina Machel</option>
                         <option value="mateus-s-mutemba">Mateus S. Mutemba</option>
                         <option value="francisco-manyanga">Francisco Manyanga</option>
                         <option value="matundo">Matundo</option>
@@ -173,37 +170,19 @@
                         <option value="samora-moises-machel">Samora Moisés Machel</option>
                     </select>
                 </div>
-                <div class="mb-3">
-                    <label for="senha" class="form-label">Senha<span> *</span></label>
-                    <input type="password" class="form-control" id="senha" name="senha" placeholder="Mínimo 6 caracteres" required>
-                </div>
-                <div class="mb-3">
-                    <label for="confirma-senha" class="form-label">Confirme a Senha<span> *</span></label>
-                    <input type="password" class="form-control" id="confirma-senha" name="confirma-senha" placeholder="Repita a senha" required>
-                </div>
-                <button type="submit" class="btn btn-custom w-100">Submeter</button>
+                <button type="submit" class="btn btn-custom w-100 mb-3">Salvar Alterações</button>
+                <button type="button" class="btn btn-outline-danger w-100" onclick="window.location.href='login.html'">Sair</button>
             </form>
-            <p class="text-center mt-3">Já tem conta? <a href="login.html" class="text-decoration-none">Entrar</a></p>
         </div>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
         <p>© 2025 Fast Delivery, Lda - Todos os direitos reservados</p>
-        <p>suporte@df.com | (
-        258) 845 109 383</p>
+        <p>suporte@fd.com | (+258) 845 109 383</p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script>
-        // Filtra a entrada para aceitar apenas números no campo #telefone
-        document.getElementById('telefone').addEventListener('input', function (e) {
-            this.value = this.value.replace(/[^0-9]/g, ''); // Remove tudo que não for número
-            if (this.value.length > 9) this.value = this.value.slice(0, 9); // Limita a 11 dígitos
-        });
-
-    </script>
 </body>
 </html>
