Falha de procurar consertado com success

--- a/login.html
+++ b/login.html
@@ -168,7 +168,7 @@
             </div>
             <div class="mb-3" id="codigo-container">
                 <label for="codigo" class="form-label">Código de 4 Dígitos</label>
-                <input type="password" class="form-control" id="codigo" name="codigo" placeholder="••••" maxlength="4" required>
+                <input type="password" class="form-control" id="codigo" name="codigo" placeholder="••••" maxlength="4">
             </div>
             <button type="submit" class="btn btn-custom w-100" id="form-button">Entrar</button>
         </form>
