Falha de procurar consertado com success

--- a/login.html
+++ b/login.html
@@ -187,7 +187,7 @@
     <!-- Footer -->
     <footer class="footer">
         <p>© 2025 Fast Delivery - Todos os direitos reservados</p>
-        <p>Contato: suporte@df.com | (+258) 845 109 383</p>
+        <p>suporte@df.com | (+258) 845 109 383</p>
     </footer>
 
     <!-- Bootstrap JS -->
