--- a/suporte.html
+++ b/suporte.html
@@ -79,7 +79,7 @@
             margin-top: 70px; /* Ajuste para o header fixo */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        
+
         .navbar-custom .navbar-brand, .navbar-custom .nav-link {
             color: white;
         }
@@ -138,6 +138,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
                             <li><a class="dropdown-item" href="promocoes.html">Promoções</a></li>
+                            <li><a class="dropdown-item" href="index.html">Sair</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -153,7 +154,8 @@
                 <h5 class="card-title fw-bold text-uppercase">Como podemos ajudar você?</h5>
                 <div class="mb-3 d-grid">
                     <label class="form-label"><strong>Efectue uma chamada:</strong></label>
-                    <label> <span class="text-primary">+258 84 510 9383</span></label>
+                    <label> <span class="text-primary">+258 84 510 9383</span> ... <span>dr. Geral Ubisse</span></label>
+                    <label> <span class="text-primary">+258 84 901 9810</span> ... <span>dra. Técnica Márcia</span></label>
                 </div>
                 <form>
                     
