--- a/dashboard-cliente.html
+++ b/dashboard-cliente.html
@@ -166,6 +166,7 @@
                             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
                             <li><a class="dropdown-item" href="promocoes.html">Promoções</a></li>
                             <li><a class="dropdown-item" href="suporte.html">Suporte</a></li>
+                            <li><a class="dropdown-item" href="index.html">Sair</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -177,7 +178,6 @@
     <div class="container mt-4 mb-5">
         <!-- Seção Dash -->
         <div id="dash" class="section">
-            <h2 class="text-center mb-4">Dash</h2>
             <div class="card p-4 mx-auto" style="max-width: 500px;">
                 <p class="text-center">Bem-vindo ao Fast Delivery! Escolha uma opção no menu acima.</p>
             </div>
@@ -185,7 +185,6 @@
 
         <!-- Seção Fazer Pedido -->
         <div id="fazer-pedido" class="section">
-            <h2 class="text-center mb-4">Fazer Pedido</h2>
             <div class="card p-4 mx-auto" style="max-width: 500px;">
                 <form id="pedido-form">
                     <div class="mb-3">
@@ -223,7 +222,6 @@
 
         <!-- Seção Meus Pedidos -->
         <div id="meus-pedidos" class="section active">
-            <h2 class="text-center mb-4">Meus Pedidos</h2>
             <div class="card mb-3">
                 <div class="card-body">
                     <h5 class="card-title"><span class="card-status">Entregue</span> - Pizza Margherita</h5>
