--- a/promocoes.html
+++ b/promocoes.html
@@ -137,6 +137,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
                             <li><a class="dropdown-item" href="suporte.html">Suporte</a></li>
+                            <li><a class="dropdown-item" href="index.html">Sair</a></li>
                         </ul>
                     </li>
                 </ul>
